syntax = "proto3";

option go_package = ".;proto";

package proto;

// Interface exported by the server.
service PluginManager {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse) {}
}

message GetRequest {
  repeated string connections = 1;
}

message GetResponse {
  map<string, ReattachConfig> reattach_map = 1;
}

message ShutdownRequest {}

message ShutdownResponse {}

message ReattachConfig {
  string protocol         = 1;
  int64  protocol_version = 2;
  NetAddr addr            = 3;
  int64 pid               = 4;
}

message NetAddr {
  string Network = 1; // name of the network (for example, "tcp", "udp")
  string Address = 2; // string form of address (for example, "192.0.2.1:25", "[2001:db8::1]:80")
}

message ConnectionConfig {
  string plugin = 1;
  string plugin_short_name = 2;
  string config = 3;

}